#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-02
2013-03-25 Andy Salnikov
- PNCCD Frame classes need special support through the aliases

Tag: V00-06-01
2013-03-25 Andy Salnikov
- fix missing slash when dumping hdf5 schema

Tag: V00-06-00
2013-03-24 Andy Salnikov
- new feature: rewriting of the naes of enum constants in HDF5 schema,
  this is needed for Encoder schema which stores enums in the forma that
  cannot be represented in C++

Tag: V00-05-18
2013-03-22 Andy Salnikov
- adding support for specification of the enum base type

Tag: V00-05-17
2013-03-22 Andy Salnikov
- DdlHdf5DataHelpers: for method return type use method type and not 
  attribute type

Tag: V00-05-16
2013-03-22 Andy Salnikov
- hdf5 schema can specify shape of the attribute, this is mostly useful
  for attribute that get its data from methods without corresponding
  attributes 

Tag: V00-05-15
2013-03-20 Andy Salnikov
- HDF5: switching to non-compound datasets

Tag: V00-05-14
2013-03-19 Andy Salnikov
- few updates for HDF5 generator

Tag: V00-05-13
2013-03-15 Andy Salnikov
- few HDF5-related changes

Tag: V00-05-12
2013-03-13 Andy Salnikov
- more HDF5 development:
  - more vlen improvements
  - char types of rank-1 are now vlen by default
  - skip-proxy tag added

Tag: V00-05-11
2013-03-12 Andy Salnikov
- more progress on HDF5 generator, vlen arrays should work better now

Tag: V00-05-10
2013-03-10 Andy Salnikov
- adding new backend for HDF5 dispatch code
- small fixes for HDF5 backend

Tag: V00-05-09
2013-03-07 Andy Salnikov
- refactoring of DdlHdf5Data, moved piece of stuff to DdlHdf5DataHelpers
- initial implementation for array datasets, compiles, not tested
